<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">logmein</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pref_startup">Login at startup</string>
    <string name="pref_startup_summ">If you tick this, whenever you open this app you\'ll be logged in. Note that this might cause slight delay in startup</string>
    <string name="Button">Button</string>

    <string name="button_save">Save</string>
    <string name="button_logmein">LogMeIn</string>
    <string name="button_logout">Logout</string>
    
    <string name="edit_password_hint">Enter Password</string>
    <string name="edit_username_hint">Enter Username</string>
    <string name="empty"></string>
    <string name="title_activity_user_database">UserDatabase</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="manage_user">Manage User</string>
    <string name="launch_browser">Launch Browser</string>
    <string name="edit_fragment">Testing: In Edit Fragment......</string>
    <string name="button_cancel">Cancel</string>

</resources>
